measurecompute/DAQ/C/cbw.h

  typedef unsigned short USHORT;

    typedef void (__stdcall *EVENTCALLBACK)(int, unsigned, unsigned, void*);

    int EXTCCONV cbGetRevision (float *RevNum, float *VxDRevNum);

    int EXTCCONV cbCIn32 (int BoardNum, int CounterNum, ULONG *Count);

    int EXTCCONV cbCLoad (int BoardNum, int RegNum, unsigned int LoadValue);

    int EXTCCONV cbCLoad32 (int BoardNum, int RegNum, ULONG LoadValue);

    int EXTCCONV cbCStatus (int BoardNum, int CounterNum, ULONG *StatusBits);

    int EXTCCONV cbDBitIn (int BoardNum, int PortType, int BitNum, 
                           USHORT *BitValue);

    int EXTCCONV cbDBitOut (int BoardNum, int PortType, int BitNum, USHORT BitValue);

    int EXTCCONV cbDConfigPort (int BoardNum, int PortNum, int Direction);

    int EXTCCONV cbDConfigBit (int BoardNum, int PortNum, int BitNum, int Direction);

    int EXTCCONV cbDIn (int BoardNum, int PortNum, USHORT *DataValue);

    int EXTCCONV cbDInScan (int BoardNum, int PortNum, long Count, long *Rate,
                            HGLOBAL MemHandle, int Options);

    int EXTCCONV cbDOut(int BoardNum, int PortNum, USHORT DataValue);

    int EXTCCONV cbDOutScan (int BoardNum, int PortNum, long Count, long *Rate,
                             HGLOBAL MemHandle, int Options);

    int EXTCCONV cbErrHandling (int ErrReporting, int ErrHandling);

    int EXTCCONV cbFileAInScan (int BoardNum, int LowChan, int HighChan,
                                long Count, long *Rate, int Gain, 
								char *FileName, int Options);

    int EXTCCONV cbFileGetInfo (char *FileName, short *LowChan, short *HighChan,
		                        long *PreTrigCount, long *TotalCount, 
								long *Rate, int *Gain);

    int EXTCCONV cbFilePretrig (int BoardNum, int LowChan, int HighChan,
                                long *PreTrigCount, long *TotalCount, 
								long *Rate, int Gain, char *FileName, 
								int Options);

    int EXTCCONV cbFileRead (char *FileName, long FirstPoint, long *NumPoints,
                             USHORT *DataBuffer);

    int EXTCCONV cbFlashLED(int BoardNum);

    int EXTCCONV cbGetErrMsg (int ErrCode, char *ErrMsg);

    int EXTCCONV cbGetIOStatus (int BoardNum, short *Status, long *CurCount,
                              long *CurIndex,int FunctionType);

    int EXTCCONV cbRS485 (int BoardNum, int Transmit, int Receive);

    int EXTCCONV cbStopIOBackground (int BoardNum, int FunctionType);

    int EXTCCONV cbTIn (int BoardNum, int Chan, int Scale, float *TempValue,
                        int Options);

    int EXTCCONV cbTInScan (int BoardNum, int LowChan, int HighChan, int Scale,
                            float *DataBuffer, int Options);

    int EXTCCONV cbMemSetDTMode (int BoardNum, int Mode);

    int EXTCCONV cbMemReset (int BoardNum);

    int EXTCCONV cbMemRead (int BoardNum, USHORT *DataBuffer, long FirstPoint, 
		                    long Count);

    int EXTCCONV cbMemWrite (int BoardNum, USHORT *DataBuffer,long FirstPoint, 
		                     long Count);

    int EXTCCONV cbMemReadPretrig (int BoardNum, USHORT *DataBuffer,
                                   long FirstPoint, long Count);

    int EXTCCONV cbWinBufToArray (HGLOBAL MemHandle, USHORT *DataArray, 
		                          long StartPt, long Count);

     int EXTCCONV cbWinBufToArray32 (HGLOBAL MemHandle, ULONG *DataArray, 
		                          long StartPt, long Count);


	  HGLOBAL EXTCCONV cbScaledWinBufAlloc (long NumPoints);

     int EXTCCONV cbScaledWinBufToArray (HGLOBAL MemHandle, double *DataArray, 
		                          long StartPt, long Count);

		
    int EXTCCONV cbWinArrayToBuf (USHORT *DataArray, HGLOBAL MemHandle, 
		                          long StartPt, long Count);

	int EXTCCONV cbScaledWinArrayToBuf (double *DataArray, HGLOBAL MemHandle, 
		                          long StartPt, long Count);


    HGLOBAL EXTCCONV cbWinBufAlloc (long NumPoints);

    HGLOBAL EXTCCONV cbWinBufAlloc32 (long NumPoints);

    HGLOBAL EXTCCONV cbWinBufAlloc64 (long NumPoints);

    int EXTCCONV cbWinBufFree (HGLOBAL MemHandle);

    int EXTCCONV cbInByte (int BoardNum, int PortNum);

    int EXTCCONV cbOutByte (int BoardNum, int PortNum, int PortVal);

    int EXTCCONV cbInWord (int BoardNum, int PortNum);

    int EXTCCONV cbOutWord (int BoardNum, int PortNum, int PortVal);


    int EXTCCONV cbGetConfig (int InfoType, int BoardNum, int DevNum, 
                              int ConfigItem, int *ConfigVal);

    int EXTCCONV cbGetConfigString (int InfoType, int BoardNum, int DevNum, 
                              int ConfigItem, char* ConfigVal, int* maxConfigLen);


    int EXTCCONV cbSetConfig (int InfoType, int BoardNum, int DevNum, 
		                      int ConfigItem, int ConfigVal);

    int EXTCCONV cbSetConfigString (int InfoType, int BoardNum, int DevNum, 
		                      int ConfigItem, char* ConfigVal, int* configLen);


    int EXTCCONV cbToEngUnits (int BoardNum, int Range, USHORT DataVal, 
		                       float *EngUnits);

    int EXTCCONV cbToEngUnits32 (int BoardNum, int Range, ULONG DataVal, 
		                       double *EngUnits);

    int EXTCCONV cbFromEngUnits (int BoardNum, int Range, float EngUnits, 
		                         USHORT *DataVal);

    int EXTCCONV cbGetBoardName (int BoardNum, char *BoardName);

    int EXTCCONV cbDeclareRevision(float *RevNum);

    int EXTCCONV cbSetTrigger (int BoardNum, int TrigType, USHORT LowThreshold, 
		                       USHORT HighThreshold);

 
	int EXTCCONV cbEnableEvent(int BoardNum, unsigned EventType, unsigned Count, 
					EVENTCALLBACK CallbackFunc, void *UserData);


	int EXTCCONV cbDisableEvent(int BoardNum, unsigned EventType);

   int EXTCCONV cbSelectSignal(int BoardNum,  int Direction, int Signal, int Connection, int Polarity);

   int EXTCCONV cbGetSignal(int BoardNum, int Direction, int Signal, int Index, int* Connection, int* Polarity);



	// Get log file name

	// store the preferences
	int EXTCCONV cbLogSetPreferences(int timeFormat, int timeZone, int units);


	// get the preferences
	int EXTCCONV cbLogGetPreferences(int* timeFormat, int* timeZone, int* units);


	// Get log file name
	int EXTCCONV cbLogGetFileName(int fileNumber, char* path, char* filename);


	// Get info for log file
	int EXTCCONV cbLogGetFileInfo(char* filename, int* version, int* fileSize);


	// Get sample info for log file
	int EXTCCONV cbLogGetSampleInfo(char* filename, int* sampleInterval, int* sampleCount, 
									int* startDate, int* startTime);


	// Get the AI channel count for log file
	int EXTCCONV cbLogGetAIChannelCount(char* filename, int* aiCount);


	// Get AI info for log file
	int EXTCCONV cbLogGetAIInfo(char* filename, int* channelNumbers, int* units);


	// Get CJC info for log file
	int EXTCCONV cbLogGetCJCInfo(char* filename, int* cjcCount);


	// Get DIO info for log file
	int EXTCCONV cbLogGetDIOInfo(char* filename, int* dioCount);


	// read the time tags to an array
	int EXTCCONV cbLogReadTimeTags(char* filename, int startSample, int count, int* dateTags, int*timeTags);


	// read the analog data to an array
	int EXTCCONV cbLogReadAIChannels(char* filename, int startSample, int count, float* analog);


	// read the CJC data to an array
	int EXTCCONV cbLogReadCJCChannels(char* filename, int startSample, int count, float* cjc);


	// read the DIO data to an array
	int EXTCCONV cbLogReadDIOChannels(char* filename, int startSample, int count, int* dio);


	// convert the log file to a .TXT or .CSV file
	int EXTCCONV cbLogConvertFile(char* srcFilename, char* destFilename, int startSample, int count, int delimiter);


	int EXTCCONV cbDaqInScan(int BoardNum, short *ChanArray, short *ChanTypeArray, short *GainArray, int ChanCount, long *Rate,
							long *PretrigCount, long *TotalCount, HGLOBAL MemHandle, int Options);

	int EXTCCONV cbDaqSetTrigger(int BoardNum, int TrigSource, int TrigSense, int TrigChan, int ChanType, 
							   int Gain, float Level, float Variance, int TrigEvent);

	int EXTCCONV cbDaqSetSetpoints (int BoardNum, float *LimitAArray, float *LimitBArray, float *Reserved, int *SetpointFlagsArray,
		                       int *SetpointOutputArray, float *Output1Array, float *Output2Array, float *OutputMask1Array,
				       float *OutputMask2Array, int SetpointCount);


	int EXTCCONV cbDaqOutScan(int BoardNum, short *ChanArray, short *ChanTypeArray, short *GainArray, int ChanCount, long *Rate,
							 long Count, HGLOBAL MemHandle, int Options);

	int EXTCCONV cbGetTCValues(int BoardNum, short *ChanArray, short *ChanTypeArray, int ChanCount, HGLOBAL MemHandle, int FirstPoint,
							 long Count, int Scale, float *TempValArray);


	int EXTCCONV cbVIn (int BoardNum, int Chan, int Gain, float *DataValue, int Options);

	int EXTCCONV cbVIn32 (int BoardNum, int Chan, int Gain, double *DataValue, int Options);

	int EXTCCONV cbVOut (int BoardNum, int Chan, int Gain, float DataValue, int Options);

	
	int EXTCCONV cbDeviceLogin(int BoardNum, char* AccountName, char* Password);

	int EXTCCONV cbDeviceLogout(int BoardNum);


	int EXTCCONV cbTEDSRead(int BoardNum, int Chan, BYTE* DataBuffer, long *Count, int Options);


//****************************************************************************
//   Legacy Function Prototypes: to revert to legacy calls, un-comment the
//          prototypes immediately below.
//
//      int EXTCCONV cbGetStatus (int BoardNum, short *Status, long *CurCount, long *CurIndex);
//      int EXTCCONV cbStopBackground (int BoardNum);
//
//   Remove the following if using the above legacy function prototypes.
#define cbGetStatus cbGetIOStatus
#define cbStopBackground cbStopIOBackground