measurecompute/DAQ/VBWIN/CBW.BAS


Declare Function cbCIn32 Lib "cbw32.dll" (ByVal BoardNum&, ByVal CounterNum&, CBCount&) As Long
Declare Function cbCLoad Lib "cbw32.dll" (ByVal BoardNum&, ByVal RegNum&, ByVal LoadValue&) As Long
Declare Function cbCLoad32 Lib "cbw32.dll" (ByVal BoardNum&, ByVal RegNum&, ByVal LoadValue&) As Long
Declare Function cbCStatus Lib "cbw32.dll" (ByVal BoardNum&, ByVal CounterNum&, StatusBits&) As Long
Declare Function cbDBitIn Lib "cbw32.dll" (ByVal BoardNum&, ByVal PortType&, ByVal BitNum&, BitValue%) As Long
Declare Function cbDBitOut Lib "cbw32.dll" (ByVal BoardNum&, ByVal PortType&, ByVal BitNum&, ByVal BitValue&) As Long
Declare Function cbDConfigPort Lib "cbw32.dll" (ByVal BoardNum&, ByVal PortNum&, ByVal Direction&) As Long
Declare Function cbDConfigBit Lib "cbw32.dll" (ByVal BoardNum&, ByVal PortNum&, ByVal BitNum&, ByVal Direction&) As Long
Declare Function cbDeclareRevision Lib "cbw32.dll" (RevNum!) As Long
Declare Function cbDIn Lib "cbw32.dll" (ByVal BoardNum&, ByVal PortNum&, DataValue%) As Long
Declare Function cbDInScan Lib "cbw32.dll" (ByVal BoardNum&, ByVal PortNum&, ByVal CBCount&, CBRate&, ByVal MemHandle&, ByVal Options&) As Long
Declare Function cbDOut Lib "cbw32.dll" (ByVal BoardNum&, ByVal PortNum&, ByVal DataValue%) As Long
Declare Function cbDOutScan Lib "cbw32.dll" (ByVal BoardNum&, ByVal PortNum&, ByVal CBCount&, CBRate&, ByVal MemHandle&, ByVal Options&) As Long
Declare Function cbErrHandling Lib "cbw32.dll" (ByVal ErrReporting&, ByVal ErrHandling&) As Long
Declare Function cbFileAInScan Lib "cbw32.dll" (ByVal BoardNum&, ByVal LowChan&, ByVal HighChan&, ByVal CBCount&, CBRate&, ByVal Gain&, ByVal Filename$, ByVal Options&) As Long
Declare Function cbFileGetInfo Lib "cbw32.dll" (ByVal Filename$, LowChan%, HighChan%, PretrigCount&, TotalCount&, CBRate&, Gain&) As Long
Declare Function cbFilePretrig Lib "cbw32.dll" (ByVal BoardNum&, ByVal LowChan&, ByVal HighChan&, PretrigCount&, CBCount&, CBRate&, ByVal Gain&, ByVal Filename$, ByVal Options&) As Long
Declare Function cbFileRead Lib "cbw32.dll" (ByVal Filename$, ByVal FirstPoint&, NumPoints&, DataBuffer%) As Long
Declare Function cbFlashLED Lib "cbw32.dll" (ByVal BoardNum&) As Long
Declare Function cbGetErrMsg Lib "cbw32.dll" (ByVal ErrCode&, ByVal ErrMsg$) As Long
Declare Function cbGetRevision Lib "cbw32.dll" (DLLRevNum!, VXDRevNum!) As Long

'*****************************************************************************
'   Legacy Function Prototypes: to revert to legacy calls, un-comment the
'          prototypes immediately below.
'
'       Declare Function cbGetStatus Lib "cbw32.dll" (ByVal BoardNum&, Status%, CurCount&, CurIndex&) As Long
'       Declare Function cbStopBackground Lib "cbw32.dll" (ByVal BoardNum&) As Long
'
'   Remove the following if using the above legacy function prototypes.
Declare Function cbGetStatus Lib "cbw32.dll" Alias "cbGetIOStatus" (ByVal BoardNum&, Status%, CurCount&, CurIndex&, ByVal FunctionType&) As Long
Declare Function cbStopBackground Lib "cbw32.dll" Alias "cbStopIOBackground" (ByVal BoardNum&, ByVal FunctionType&) As Long
'*****************************************************************************

Declare Function cbMemSetDTMode Lib "cbw32.dll" (ByVal BoardNum&, ByVal Mode&) As Long
Declare Function cbMemReset Lib "cbw32.dll" (ByVal BoardNum&) As Long
Declare Function cbMemRead Lib "cbw32.dll" (ByVal BoardNum&, DataBuffer%, ByVal FirstPoint&, ByVal CBCount&) As Long
Declare Function cbMemWrite Lib "cbw32.dll" (ByVal BoardNum&, DataBuffer%, ByVal FirstPoint&, ByVal CBCount&) As Long
Declare Function cbMemReadPretrig Lib "cbw32.dll" (ByVal BoardNum&, DataBuffer%, ByVal FirstPoint&, ByVal CBCount&) As Long
Declare Function cbRS485 Lib "cbw32.dll" (ByVal BoardNum&, ByVal Transmit&, ByVal Receive&) As Long
Declare Function cbTIn Lib "cbw32.dll" (ByVal BoardNum&, ByVal Chan&, ByVal CBScale&, TempValue!, ByVal Options&) As Long
Declare Function cbTInScan Lib "cbw32.dll" (ByVal BoardNum&, ByVal LowChan&, ByVal HighChan&, ByVal CBScale&, DataBuffer!, ByVal Options&) As Long
Declare Function cbWinBufToArray Lib "cbw32.dll" (ByVal MemHandle&, DataBuffer%, ByVal FirstPoint&, ByVal CBCount&) As Long
Declare Function cbWinBufToArray32 Lib "cbw32.dll" (ByVal MemHandle&, DataBuffer&, ByVal FirstPoint&, ByVal CBCount&) As Long

Declare Function cbScaledWinBufAlloc Lib "cbw32.dll" (ByVal NumPoints&) As Long
Declare Function cbScaledWinBufToArray Lib "cbw32.dll" (ByVal MemHandle&, DataBuffer#, ByVal FirstPoint&, ByVal CBCount&) As Long

Declare Function cbWinArrayToBuf Lib "cbw32.dll" (DataArray%, ByVal MemHandle&, ByVal FirstPoint&, ByVal CBCount&) As Long
Declare Function cbScaledWinArrayToBuf Lib "cbw32.dll" (DataArray#, ByVal MemHandle&, ByVal FirstPoint&, ByVal CBCount&) As Long

Declare Function cbWinBufAlloc Lib "cbw32.dll" (ByVal NumPoints&) As Long
Declare Function cbWinBufFree Lib "cbw32.dll" (ByVal MemHandle&) As Long
Declare Function cbInByte Lib "cbw32.dll" (ByVal BoardNum&, ByVal PortNum&) As Long
Declare Function cbOutByte Lib "cbw32.dll" (ByVal BoardNum&, ByVal PortNum&, ByVal PortVal%) As Long
Declare Function cbInWord Lib "cbw32.dll" (ByVal BoardNum&, ByVal PortNum&) As Long
Declare Function cbOutWord Lib "cbw32.dll" (ByVal BoardNum&, ByVal PortNum&, ByVal PortVal%) As Long

Declare Function cbWinBufAlloc32 Lib "cbw32.dll" (ByVal NumPoints&) As Long
Declare Function cbWinBufAlloc64 Lib "cbw32.dll" (ByVal NumPoints&) As Long
'*****************************************************************************
'   Legacy Function Prototypes: to revert to legacy calls, un-comment the
'          prototypes immediately below.
'
'      Declare Function cbGetConfig Lib "cbw32.dll" (ByVal InfoType&, ByVal BoardNum&, ByVal DevNum&, ByVal ConfigItem&, ByRef ConfigVal%) As Long
'
'   Remove the following if using the above legacy function prototypes.
Declare Function cbGetConfig Lib "cbw32.dll" (ByVal InfoType&, ByVal BoardNum&, ByVal DevNum&, ByVal ConfigItem&, ByRef ConfigVal&) As Long
'*****************************************************************************

Declare Function cbGetConfigString Lib "cbw32.dll" (ByVal InfoType&, ByVal BoardNum&, ByVal DevNum&, ByVal ConfigItem&, ByVal ConfigVal$, ByRef MaxConfigLen&) As Long

Declare Function cbSetConfig Lib "cbw32.dll" (ByVal InfoType&, ByVal BoardNum&, ByVal DevNum&, ByVal ConfigItem&, ByVal ConfigVal&) As Long

Declare Function cbSetConfigString Lib "cbw32.dll" (ByVal InfoType&, ByVal BoardNum&, ByVal DevNum&, ByVal ConfigItem&, ByVal ConfigVal$, ByRef ConfigLen&) As Long

Declare Function cbToEngUnits Lib "cbw32.dll" (ByVal BoardNum&, ByVal Range&, ByVal DataVal%, EngUnits!) As Long
Declare Function cbToEngUnits32 Lib "cbw32.dll" (ByVal BoardNum&, ByVal Range&, ByVal DataVal&, EngUnits#) As Long

Declare Function cbFromEngUnits Lib "cbw32.dll" (ByVal BoardNum&, ByVal Range&, ByVal EngUnits!, DataVal%) As Long
Declare Function cbGetBoardName Lib "cbw32.dll" (ByVal BoardNum&, ByVal BoardName$) As Long
Declare Function cbSetTrigger Lib "cbw32.dll" (ByVal BoardNum&, ByVal TrigType&, ByVal LowThreshold%, ByVal HighThreshold%) As Long
Declare Function cbEnableEvent Lib "cbw32.dll" (ByVal BoardNum&, ByVal EventType&, ByVal EventSize&, ByVal Callback As Long, ByRef UserData As Any) As Long
Declare Function cbDisableEvent Lib "cbw32.dll" (ByVal BoardNum&, ByVal EventType&) As Long
Declare Function cbSelectSignal Lib "cbw32.dll" (ByVal BoardNum&, ByVal Direction&, ByVal Signal&, ByVal Connection&, ByVal Polarity&) As Long
Declare Function cbGetSignal Lib "cbw32.dll" (ByVal BoardNum&, ByVal Direction&, ByVal Signal&, ByVal Index&, ByRef Connection&, ByRef Polarity&) As Long
Declare Function cbLogSetPreferences Lib "cbw32.dll" (ByVal TimeFormat&, ByVal TimeZone&, ByVal Units&) As Long
Declare Function cbLogGetPreferences Lib "cbw32.dll" (ByRef TimeFormat&, ByRef TimeZone&, ByRef Units&) As Long
Declare Function cbLogGetFileName Lib "cbw32.dll" (ByVal FileNum&, ByVal Path$, ByVal Filename$) As Long
Declare Function cbLogGetFileInfo Lib "cbw32.dll" (ByVal Filename$, ByRef Version&, ByRef Size&) As Long
Declare Function cbLogGetSampleInfo Lib "cbw32.dll" (ByVal Filename$, ByRef SampleInterval&, ByRef SampleCount&, ByRef StartDate&, ByRef StartTime&) As Long
Declare Function cbLogGetAIChannelCount Lib "cbw32.dll" (ByVal Filename$, ByRef AICount&) As Long
Declare Function cbLogGetAIInfo Lib "cbw32.dll" (ByVal Filename$, ByRef ChannelNumbers&, ByRef Units&) As Long
Declare Function cbLogGetCJCInfo Lib "cbw32.dll" (ByVal Filename$, ByRef CJCChannelCount&) As Long
Declare Function cbLogGetDIOInfo Lib "cbw32.dll" (ByVal Filename$, ByRef DIOChannelCount&) As Long
Declare Function cbLogReadTimeTags Lib "cbw32.dll" (ByVal Filename$, ByVal StartSample&, ByVal SampleCount&, ByRef Dates&, ByRef Times&) As Long
Declare Function cbLogReadAIChannels Lib "cbw32.dll" (ByVal Filename$, ByVal StartSample&, ByVal SampleCount&, ByRef AIChannelData!) As Long
Declare Function cbLogReadCJCChannels Lib "cbw32.dll" (ByVal Filename$, ByVal StartSample&, ByVal SampleCount&, ByRef CJCChannelData!) As Long
Declare Function cbLogReadDIOChannels Lib "cbw32.dll" (ByVal Filename$, ByVal StartSample&, ByVal SampleCount&, ByRef DIOChannelData&) As Long
Declare Function cbLogConvertFile Lib "cbw32.dll" (ByVal Filename$, ByVal DestFilename$, ByVal StartSample&, ByVal SampleCount&, ByVal Delimiter&) As Long

Declare Function cbDaqInScan Lib "cbw32.dll" (ByVal BoardNum&, ChanArray%, ChanTypeArray%, GainArray%, ByVal ChanCount&, CBRate&, PretrigCount&, CBCount&, ByVal MemHandle&, ByVal Options&) As Long
Declare Function cbDaqSetTrigger Lib "cbw32.dll" (ByVal BoardNum&, ByVal TrigSource&, ByVal TrigSense&, ByVal TrigChan&, ByVal ChanType&, ByVal Gain&, ByVal Level!, ByVal Variance!, ByVal TrigEvent&) As Long
Declare Function cbDaqOutScan Lib "cbw32.dll" (ByVal BoardNum&, ChanArray%, ChanTypeArray%, GainArray%, ByVal ChanCount&, CBRate&, ByVal CBCount&, ByVal MemHandle&, ByVal Options&) As Long
Declare Function cbGetTCValues Lib "cbw32.dll" (ByVal BoardNum&, ChanArray%, ChanTypeArray%, ByVal ChanCount&, ByVal MemHandle&, ByVal FirstPoint&, ByVal CBCount&, ByVal CBScale&, TempValArray!) As Long
Declare Function cbDaqSetSetpoints Lib "cbw32.dll" (ByVal BoardNum&, LimitAArray!, LimitBArray!, Reserved!, SetpointFlagsArray&, SetpointOutputArray&, Output1Array!, Output2Array!, OutputMask1Array!, OutputMask2Array!, ByVal SetpointCount&) As Long

Declare Function cbVIn Lib "cbw32.dll" (ByVal BoardNum&, ByVal Chan&, ByVal Gain&, DataValue!, ByVal Options&) As Long
Declare Function cbVIn32 Lib "cbw32.dll" (ByVal BoardNum&, ByVal Chan&, ByVal Gain&, DataValue#, ByVal Options&) As Long
Declare Function cbVOut Lib "cbw32.dll" (ByVal BoardNum&, ByVal Chan&, ByVal Gain&, ByVal DataValue!, ByVal Options&) As Long

Declare Function cbDeviceLogin Lib "cbw32.dll" (ByVal BoardNum&, ByVal AccountName$, ByVal Password$) As Long
Declare Function cbDeviceLogout Lib "cbw32.dll" (ByVal BoardNum&) As Long

Declare Function cbTEDSRead Lib "cbw32.dll" (ByVal BoardNum&, ByVal Chan&, DataBuffer As Byte, CBCount&, ByVal Options&) As Long

#End If

